<resources>
    <string name="app_name">军车管理</string>
    <string name="welcome">WELCOME</string>
    <string name="visit">欢迎访问</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="enter">登录</string>
    <string name="idtxthint">用户名</string>
    <string name="pwdtxthint">  密码</string>
    <string name="loginbtntext">登录</string>
    <string name="forgot_pwd">忘记密码？</string>
    <string name="loading">正在登录</string>
    <string name="img_dingwei">&#xf1b9;</string>//定位
    <string name="img_guiji">&#xf010;</string>//轨迹
    <string name="img_settings">&#xf2bd;</string>//注销
    <string name="img_speed">&#xf04e;</string>//快进
    <string name="img_down">&#xf04a;</string>//快退
    <string name="img_play">&#xf04b;</string>//播放
    <string name="img_pause">&#xf04c;</string>//暂停
    <string name="img_stop">&#xf04d;</string>//停止
    <string name="qiehuanzhanghao">切换账号</string>
    <string name="tuichuyingyong">退出应用</string>
    <string name="title_activity_guiji_genzong">GuijiGenzongActivity</string>


</resources>
