<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainweixin"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/main_bottom"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <com.amap.api.maps.MapView
            android:id="@+id/TarckShowMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/basicmap"
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:gravity="center"
            android:background="@drawable/btn_map_poi"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="标准地图"/>
        <Button
            android:id="@+id/rsmap"
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:gravity="center"
            android:background="@drawable/btn_map_poi"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="卫星地图"/>
        <Button
            android:id="@+id/nightmap"
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:background="@drawable/btn_map_poi"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="12sp"
            android:text="夜间模式"/>
        <Button
            android:id="@+id/navimap"
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:background="@drawable/btn_map_poi"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="12sp"
            android:text="导航模式"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/listView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="#fdfdfd"
            android:fadeScrollbars="true"
            android:scrollbars="vertical"
            android:visibility="invisible" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:background="#f6f6f9"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/img_stop"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/sex_selected_bg"
                >

                <TextView
                    android:id="@+id/img_stop1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/img_stop"
                    android:textColor="#020202"
                    android:textSize="20sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/img_play"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/sex_selected_bg"
                >

                <TextView
                    android:id="@+id/img_play1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/img_play"
                    android:textColor="#020202"
                    android:textSize="20sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/img_down"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/sex_selected_bg"
                >

                <TextView
                    android:id="@+id/img_down1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/img_down"
                    android:textColor="#020202"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/img_speed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/sex_selected_bg"
                >

                <TextView
                    android:id="@+id/img_speed1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/img_speed"
                    android:textColor="#020202"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:paddingBottom="2dp">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="车牌号码：" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="开始时间：" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="结束时间：" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/plateIDTextView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/startDateTextView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/endDateTextView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="切换" />

            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>
</RelativeLayout>
